--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
 
   frontend:
     build:
-      context: ../../WebStormProjects/FRONT
+      context: ../../WebStormProjects/FRONT   # здесь нужно указать путь к фронтенду
     container_name: frontend
     ports:
       - "4173:80"
